--- a/app/src/main/res/layout/ancient_armenian_calendar_widget.xml
+++ b/app/src/main/res/layout/ancient_armenian_calendar_widget.xml
@@ -13,6 +13,7 @@
         android:contentDescription="@string/appwidget_text"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
+        android:paddingTop="16dp"
         android:text="@string/appwidget_text"
         android:textColor="#ffffff"
         android:textSize="24sp" />
