--- a/app/src/main/res/xml/ancient_armenian_calendar_widget_info.xml
+++ b/app/src/main/res/xml/ancient_armenian_calendar_widget_info.xml
@@ -6,5 +6,5 @@
     android:minWidth="125dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="60000"
+    android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen|keyguard" />
